external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_not_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/signed_int_not_invalid.move:7:19
  │
7 │         let _x = !1i8;
  │                   ^^^
  │                   │
  │                   Invalid argument to '!'
  │                   Expected: 'bool'
  │                   Given: 'i8'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/signed_int_not_invalid.move:12:19
   │
11 │         let x: i64 = 5i64;
   │                --- Given: 'i64'
12 │         let _y = !x;
   │                   ^
   │                   │
   │                   Invalid argument to '!'
   │                   Expected: 'bool'
